--- a/index.html
+++ b/index.html
@@ -188,8 +188,10 @@
     function processPayment() {
       // Add logic to process payment (e.g., communicate with a payment gateway)
       alert("Payment processed successfully! Keys are ready for collection.");
+
+      // Redirect to another.html after payment is done
+      window.location.href = "another.html";
     }
   </script>
 </body>
 </html>
-
